--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,11 @@ coreschema==0.0.4
 cryptography==3.4.8
 cssselect2==0.4.1
 defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==3.2.7
 django-allauth==0.45.0
 django-cors-headers==3.8.0
+django-heroku==0.3.1
 django-six==1.0.4
 django-summernote==0.8.11.6
 django-utils-six==2.0
@@ -26,6 +28,7 @@ djangorestframework-simplejwt==4.8.0
 drf-yasg==1.20.0
 Faker==8.12.1
 fonttools==4.26.2
+gunicorn==20.1.0
 html5lib==1.1
 idna==3.2
 inflection==0.5.1
@@ -36,7 +39,9 @@ MarkupSafe==2.0.1
 oauthlib==3.1.1
 packaging==21.0
 Pillow==8.3.2
+pkg_resources==0.0.0
 prompt-toolkit==3.0.20
+psycopg2==2.9.1
 pycparser==2.20
 pydyf==0.1.1
 PyJWT==2.1.0
@@ -59,4 +64,5 @@ vine==5.0.0
 wcwidth==0.2.5
 weasyprint==53.2
 webencodings==0.5.1
+whitenoise==5.3.0
 zopfli==0.1.8
